# rust-pup

./: .gitignore  Cargo.toml  README.md  TODO.md  build.sh  vendor.sh
.cargo/: vendor
crates/pup-core/: Cargo.toml
crates/pup-core/data/tasks/tests/builds/bad/: manifest.yml
crates/pup-core/data/tasks/tests/builds/deployment/: manifest.yml
crates/pup-core/sample/: dev.yml
crates/pup-core/sample/tasks/tests/actions/nested/nestedStep2/: manifest.yml
crates/pup-core/sample/tasks/tests/actions/prepareFolder/: manifest.yml
crates/pup-core/sample/tasks/tests/common/prepFolder/: manifest.yml
crates/pup-core/src/: context.rs  errors.rs  lib.rs  logger.rs  manifest.rs  process.rs  task.rs  testing.rs  worker.rs
crates/pup-core/src/context/: global_env.rs
crates/pup-core/src/runner/: action.rs  env.rs  exec.rs  mod.rs  runner.rs
crates/pup-core/src/utils/: path.rs
crates/pup-worker/: .gitignore  Cargo.toml  README.md
crates/pup-worker/src/: errors.rs  lib.rs  logger.rs
crates/pup-worker/src/utils/: exec.rs  mod.rs  path.rs
workers/pup-worker-msbuild/: Cargo.toml  README.md
workers/pup-worker-msbuild/.cargo/: vendor
workers/pup-worker-msbuild/sample/: main.yml
workers/pup-worker-msbuild/sample/devenv/: main.yml
workers/pup-worker-msbuild/src/: main.rs
workers/pup-worker-patch/: Cargo.toml  README.md
workers/pup-worker-patch/.cargo/: vendor
workers/pup-worker-patch/sample/: bar.txt  foo.txt  main.yml
workers/pup-worker-patch/sample/output/: bar.txt  foo.txt  foo2.txt
workers/pup-worker-patch/src/: logger.rs  main.rs  manifest.rs  patch.rs
workers/pup-worker-patch/src/patchers/: copy.rs  mod.rs  regex.rs
workers/pup-worker-pathtools/: Cargo.toml  README.md
workers/pup-worker-pathtools/sample/basic-test/: main.yml  test.sh
workers/pup-worker-pathtools/sample/basic-test/workpath/: .gitignore
workers/pup-worker-pathtools/sample/copy-test/: .gitignore  main.yml  test.sh
workers/pup-worker-pathtools/src/: actions.rs  arguments.rs  logger.rs  main.rs  manifest.rs  tools_env.rs  tools_path.rs
(+64 files in other folders)
