[package]
name = "pup-core"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
serde = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
time = "*"
lazy_static = "1.0"
dunce = "0.1"
handlebars = "1.0.0-beta.2"

[dependencies.base-logging]
git = "https://github.com/shadowmint/rust-base-logging"
branch = "master"
