[package]
name = "pup-worker-msbuild"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
handlebars = "1.0.0-beta.2"
serde = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
walkdir = "2"
dirs = "2.0.1"

[dependencies.pup-worker]
git = "https://github.com/shadowmint/rust-pup-worker"
branch = "master"

