[package]
name = "pup-worker-pathtools"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
handlebars = "1.0.0-beta.2"
serde = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
getopts = "0.2.17"
regex = "1.0"
uuid = {version = "0.7", features=["v4"]}

[dependencies.pup-worker]
git = "https://github.com/shadowmint/rust-pup-worker"
branch = "master"

[dependencies.base-logging]
git = "https://github.com/shadowmint/rust-base-logging"
branch = "master"
